--- a/methodChaining.html
+++ b/methodChaining.html
@@ -22,7 +22,13 @@
                 return this;
             }
         }
-        ladder.up().up().down().showStep().down().showStep();
+        ladder
+            .up()
+            .up()
+            .down()
+            .showStep()
+            .down()
+            .showStep();
     </script>
 </body>
 </html>
